--- a/Labs/4.Permissions/SourceFiles/Skeletons/PermissionsLab/AndroidManifest.xml
+++ b/Labs/4.Permissions/SourceFiles/Skeletons/PermissionsLab/AndroidManifest.xml
@@ -8,8 +8,10 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
 
-    <!--  TODO - add uses-permission elements -->
-
+    <!-- add uses-permission elements -->
+	<uses-permission android:name="com.android.browser.permission.READ_HISTORY_BOOKMARKS"/>
+	<uses-permission android:name="course.labs.permissions.DANGEROUS_ACTIVITY"/>
+		
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
